# colcon-multiprocess-recursive-crawl

./: README.rst  setup.cfg
colcon_multiprocess_recursive_crawl/package_discovery/: recursive_crawl.py
