[metadata]
name = colcon-multiprocess-recursive-crawl
version = attr: colcon_multiprocess_recursive_crawl.__version__
url = https://colcon.readthedocs.io
project_urls =
    GitHub = https://github.com/mikpurvis/colcon-multiprocess-recursive-crawl/
author = Mike Purvis
author_email = mpurvis@clearpath.ai
maintainer = Mike Purvis
maintainer_email = mpurvis@clearpath.ai
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to recursively crawl for packages.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.5.0
packages = find:
tests_require =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = true

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-recursive-crawl

[options.entry_points]
colcon_core.package_discovery =
    multiprocess_recursive = colcon_multiprocess_recursive_crawl.package_discovery.recursive_crawl:MultiProcessRecursiveDiscoveryExtension

[flake8]
import-order-style = google
